<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp" >

    <ImageView
        android:id="@+id/TC_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:src="@drawable/mlab" />

    <TextView
        android:id="@+id/TC_className"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/TC_image"
        android:padding="10dp"
        android:text="Class Name Here"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/TC_layoutStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/TC_className"
        android:layout_below="@id/TC_className"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/TC_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/admin_start_date"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TC_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wednesday, 30 November 2013"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TC_layoutEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TC_image"
        android:layout_alignLeft="@+id/TC_layoutStart"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TC_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/admin_end_date"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TC_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wednesday, 30 November 2014"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TC_layoutEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TC_image"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TC_label3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/admin_label"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TC_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Administrator"
            android:textColor="@color/translucent_red"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>